Fixed deck graphic not showing bug

--- a/experiments/cards/index.css
+++ b/experiments/cards/index.css
@@ -51,6 +51,7 @@ html , body {
 }
 
 #viewport {
+	user-select: none;
 	font-size: 32px;
 }
 #roundnumber {
